upload api sprint